# Roman-Empire-Daily

./: .gitignore  NOTES.md  README.md  pyproject.toml
roman_empire_ig/: README.md  cli.py  composer.py  config.py  fact_demo.py  fact_generator.py  image_generator.py  image_to_video.py  pipeline.py  poster.py  text_to_video.py
roman_empire_ig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_fact_generation.py  test_pipeline.py
